--- a/js02/index.html
+++ b/js02/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Funciones</title>
 </head>
 <body>
+    <h1>Funciones</h1>
     <script src="./js02.js"></script>
 </body>
 </html>
