--- a/js08/js-08-clases.html
+++ b/js08/js-08-clases.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>J08 Clases</h1>
-    <script src="./js-08-clases.js"></script>
+    <script type="module" src="./js-08-instancias.js"></script>
 </body>
 </html>
