--- a/js09/index.html
+++ b/js09/index.html
@@ -12,6 +12,7 @@
     <button type="button" onclick="getUsersFetch()" class="btn btn-primary">Users</button>
     <button type="button" onclick="getUsersAxios()" class="btn btn-primary">Users Axios</button>
     <button type="button" onclick="getUsersAxiosAwait()" class="btn btn-primary">Users Axios async</button>
+    <button type="button" onclick="createUser()" class="btn btn-primary">Post User</button>
 
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
